   * Add "More than two lines" to "Modify selection"
   * Settings: Small helper window to calc gap in frames
* IMPROVED:
   * Update Bulgarian translation - thx KalinM
   * Init no-break-after-list with language
   * Make quick-char-list in "OCR Char" window dynamic
   * Remember settings for "column paste"
   * Make "Google translate" shortcut customizable - thx darnn
* FIXED:
   * Fix for sometimes missing last sub in teletext - thx borifax/xylographe
   * Fix OCR window after minimize - thx Janusz
   * Fix missing images in bdsup - thx Devin
   * Fix for unstable duration in frame time mode - thx btsix
   * Fix for loading Sami styles - thx Jamakmake
   * Fix for compare ("..." vs "..") - thx GCRaistlin
   * Make "Shift+F9" behave like the old "F9" from SE 3.5.14
   * Fix crash in load of profile/continuation-style - thx xy
   * Fix auto adjust start via wf for original - thx OmrSi


3.5.15 (1st May 2020)
* NEW:
   * Add "sentence continuation style" - thx Flitskikker
   * Allow generation of waveform without audio - thx serquis/grzesiek
   * "Auto-adjust start via volume/scene-change" shortcut - thx Odaylton
   * Add shortcut "Select next subtitle (from video pos)" - thx OmrSi
   * Add shortcuts for extending to line before/after - thx Flitskikker
   * Line width pixels in main-win/syntax-validation/statistics - thx Flitskikker
   * Add "snap to scene change" option for waveform - thx Flitskikker
   * Add FCE rule about commas - thx Jamakmake/OmrSi
   * Add new subtitle format - thx Marko
   * Add new subtitle format - thx José
   * Add new subtitle format - thx Bersu
   * Add new subtitle format - thx Michael
   * Add support for pasting file from clipboard in list view - thx 5j9
* IMPROVED:
   * Update Bulgarian translation - thx KalinM
   * Update Finnish translation - thx Teijo S
   * Update Korean translation - thx domddol
   * Update Brazilian translation - thx Igor
   * Update Greek translation - thx Lero91