@@ -16,16 +16,18 @@
    * Make quick-char-list in "OCR Char" window dynamic
    * Remember settings for "column paste"
    * Make "Google translate" shortcut customizable - thx darnn
+   * Make teletext lines start with '<' italic - thx borifix
 * FIXED:
    * Fix for sometimes missing last sub in teletext - thx borifax/xylographe
+   * Fix for sometimes missing images in bdsup - thx Devin
    * Fix OCR window after minimize - thx Janusz
-   * Fix missing images in bdsup - thx Devin
    * Fix for unstable duration in frame time mode - thx btsix
    * Fix for loading Sami styles - thx Jamakmake
    * Fix for compare ("..." vs "..") - thx GCRaistlin
    * Make "Shift+F9" behave like the old "F9" from SE 3.5.14
    * Fix crash in load of profile/continuation-style - thx xy
    * Fix auto adjust start via wf for original - thx OmrSi
+   * Fix updating libmpv (requires SE restart) - thx Bill
 
 
 3.5.15 (1st May 2020)
